# HeadingIndicatorExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Constants.h  HeadingIndicator.cpp  HeadingIndicator.h  README.md  main.cpp
